# LogisticRegression

./: pyproject.toml
02 Binary Predictors/: Binary Predictors in a Logistic Regression.ipynb
Exercise/: Building a Logistic Regression - Exercise.ipynb
Understanding the Logistic regression tables/: Understanding Logistic Regression Tables.ipynb
