[project]
name = "logisticregression"
version = "0.1.0"
description = ""
authors = [
    {name = "Raf Blanckaert",email = "rblanckaert@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "logisticregression", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
